--- a/resource/RosURDFConfig.ui
+++ b/resource/RosURDFConfig.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>RosTfTreeWidget</class>
+ <class>ROSURDFConfigurator</class>
  <widget class="QWidget" name="RosTfTreeWidget">
   <property name="enabled">
    <bool>true</bool>
@@ -10,11 +10,11 @@
     <x>0</x>
     <y>0</y>
     <width>1144</width>
-    <height>307</height>
+    <height>507</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TF Tree</string>
+   <string>URDF configurator</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
    <item>
@@ -22,21 +22,21 @@
      <item>
       <widget class="QPushButton" name="new_urdf_file">
        <property name="toolTip">
-        <string>Clear TF Buffer</string>
+        <string>New URDF file</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="load_urdf_push_button">
        <property name="toolTip">
-        <string>Load DOT graph from file</string>
+        <string>Load URDF from file</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="update_urdf_push_button">
        <property name="toolTip">
-        <string>Refresh TF Tree</string>
+        <string>Reload urdf</string>
        </property>
       </widget>
      </item>
@@ -56,7 +56,7 @@
      <item>
       <widget class="QCheckBox" name="showJoints">
        <property name="text">
-        <string>showJoints</string>
+        <string>Show joints in graph</string>
        </property>
       </widget>
      </item>
@@ -90,7 +90,7 @@
      <item>
       <widget class="QPushButton" name="save_urdf_push_button">
        <property name="toolTip">
-        <string>Save as image</string>
+        <string>Save urdf</string>
        </property>
       </widget>
      </item>
@@ -158,7 +158,7 @@
            </widget>
           </item>
           <item row="0" column="0" colspan="2">
-           <widget class="QLabel" name="Link_name">
+           <widget class="QLabel" name="linkName">
             <property name="maximumSize">
              <size>
               <width>2000</width>
